--- a/romantic.html
+++ b/romantic.html
@@ -24,6 +24,12 @@
 	    color: #FFFFFF;
         }
         
+	h3 {
+	    font-size: 150%;
+            font-weight: 300;
+            color: #FFFFFF;
+	}
+
         .content {
             position: absolute;
             width: 100%;
@@ -47,10 +53,12 @@
 
 <body>
     <div class="content">
+	<h2>2021年2月27日晚，洪崖洞totomato...</h2>
         <h2>我们已经在一起了</h2>
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <b id="m"></b> Minutes <b id="s"></b> Seconds
         </div>
+	<h3>死鬼，mua~ &#128151</h3>
     </div>
     <!-->
     <script language="javascript">
