--- a/romantic.html
+++ b/romantic.html
@@ -13,7 +13,8 @@
             -webkit-font-smoothing: antialiased;
             font-family: Helvetica Neue, Helvetica, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
             background-image: url('bg.jpg');
-	    background-size: cover; 
+	    background-size: cover;
+	    background-repeat:no-repeat; 
             font-size: 85%;
             margin: 0;
         }
