--- a/romantic.html
+++ b/romantic.html
@@ -81,7 +81,7 @@
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <b id="m"></b> Minutes <b id="s"></b> Seconds
         </div>
-	<h3>想分享你的快乐，更愿倾听你的烦恼 &#128151</h3>
+	<h3>想于你分享快乐，更愿倾听你的烦恼 &#128151</h3>
     </div>
     <!-->
     <script language="javascript">
