--- a/romantic.html
+++ b/romantic.html
@@ -81,7 +81,7 @@
         <div class="timer">
             <b id="d"></b> Days <b id="h"></b> Hours <b id="m"></b> Minutes <b id="s"></b> Seconds
         </div>
-	<h3>想于你分享快乐，更愿倾听你的烦恼 &#128151</h3>
+	<h3>想与你分享快乐，更愿倾听你的烦恼 &#128151</h3>
     </div>
     <!-->
     <script language="javascript">
@@ -165,7 +165,7 @@ var fnTextPopup = function (arr, options) {
     });    
 };
 
-fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz']);
+fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz','爸爸，我错了...']);
 </script>
 </body>
 
