--- a/romantic.html
+++ b/romantic.html
@@ -165,7 +165,7 @@ var fnTextPopup = function (arr, options) {
     });    
 };
 
-fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz','爸爸，我错了...']);
+fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz','mua~']);
 </script>
 </body>
 
