--- a/romantic.html
+++ b/romantic.html
@@ -164,7 +164,7 @@ var fnTextPopup = function (arr, options) {
     });    
 };
 
-fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz','mua~']);
+fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz','mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','一天就在想占我便宜？']);
 </script>
 </body>
 
