--- a/romantic.html
+++ b/romantic.html
@@ -164,7 +164,7 @@ var fnTextPopup = function (arr, options) {
     });    
 };
 
-fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz','mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','一天就在想占我便宜？']);
+fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz','mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','一天就在想占我便宜？', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '想得美~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '准备好了吗？', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '还是当面吧(害羞...)']);
 </script>
 </body>
 
