--- a/test.html
+++ b/test.html
@@ -9,12 +9,9 @@
     <title>全球首家大型线上吸猫网站</title>
 </head>
 <body style="background: gainsboro;">
-<h3>全球首家大型线上吸猫网站</h3>
 
 <div style="font-size: 24px">
-    <span>在线选猫：</span>
-    <a href="javascript:show(tororo)">白猫</a>
-    <a href="javascript:show(hijiki)">黑猫</a>
+    <div href="javascript:show(hijiki)"></div>
 </div>
 </body>
 <script src="l2dwidget.min.js"></script>
