--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 <body style="background: gainsboro;">
 
 <div style="font-size: 24px">
-    <div href="javascript:show(hijiki)"></div>
+    <div href="javascript:show(tororo)"></div>
 </div>
 </body>
 <script src="l2dwidget.min.js"></script>
