--- a/test.html
+++ b/test.html
@@ -10,9 +10,7 @@
 </head>
 <body style="background: gainsboro;">
 
-<div style="font-size: 24px">
-    <div href="javascript:show(tororo)"></div>
-</div>
+
 </body>
 <script src="l2dwidget.min.js"></script>
 <script>
@@ -47,7 +45,7 @@
         },
     }
     window.onload = function () {
-        show(tororo);
+        show(hijiki);
     }
 </script>
 </html>
