--- a/romantic.html
+++ b/romantic.html
@@ -166,6 +166,42 @@ var fnTextPopup = function (arr, options) {
 
 fnTextPopup(['mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '再摸亲你耳朵了哟', '好吧，您是大哥orz','mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~','一天就在想占我便宜？', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '想得美~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '准备好了吗？', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', 'mua~', '还是当面吧(害羞...)']);
 </script>
+<script src="l2dwidget.min.js"></script>
+<script>
+    var tororo = 'tororo/assets/tororo.model.json';
+    var hijiki = 'hijiki/assets/hijiki.model.json';
+
+    function show(path) {
+        config.model.jsonPath = path;
+        L2Dwidget.init(config)
+    }
+    // 配置文件官方API: https://l2dwidget.js.org/docs/class/src/index.js~L2Dwidget.html#instance-method-init
+    var config = {
+        model: {
+            jsonPath: '', // xxx.model.json 的路径
+        },
+        display: {
+            superSample: 1, // 超采样等级
+            width: 350, // canvas的宽度
+            height: 400, // canvas的高度
+            position: 'right', // 显示位置：左或右
+            hOffset: 0, // canvas水平偏移
+            vOffset: 0, // canvas垂直偏移
+        },
+        mobile: {
+            show: true, // 是否在移动设备上显示
+            scale: 1, // 移动设备上的缩放
+            motion: true, // 移动设备是否开启重力感应
+        },
+        react: {
+            opacityDefault: 1, // 默认透明度
+            opacityOnHover: 1, // 鼠标移上透明度
+        },
+    }
+    window.onload = function () {
+        show(hijiki);
+    }
+</script>
 </body>
 
 </html>
